--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,12 @@
 :root {
-  --primary: #f0d0d0;
+  --warna1: #a48860;
+  --warna2: #f1e2c9;
+  --warna3: #ddc49a;
+  --warna4: #faf1e2;
+  --warna5: #64533c;
 }
 
 * {
-  font-family: Arial, Helvetica, sans-serif;
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -12,10 +15,14 @@
   text-decoration: none;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
-  font-family: "Courier New", Courier, monospace;
-  background-color: var(--primary);
-  color: #fff;
+  background-color: var(--warna2);
+  color: black;
+  font-family: "Playfair Display", serif;
 }
 
 /* Navbar */
@@ -24,17 +31,19 @@ body {
   justify-content: space-between;
   align-items: center;
   padding: 1.4rem 7%;
-  background-color: rgb(165, 42, 42, 0.8);
-  border-bottom: 1px solid rgb(24, 21, 18);
+  background-color: var(--warna1);
+  border-bottom: 1px;
   position: fixed;
   top: 0;
   left: 0;
   right: 0;
   z-index: 999;
+  font-family: "Noto Serif Display", serif;
 }
 .navbar .navbar-logo {
   font-size: 1.6rem;
   font-weight: 700;
+  color: white;
 }
 .navbar .navbar-nav a {
   color: #fff;
@@ -44,14 +53,14 @@ body {
 }
 
 .navbar .navbar-nav a:hover {
-  color: aqua;
+  color: black;
 }
 
 .navbar .navbar-nav a::after {
   content: "";
   display: block;
   padding-bottom: 0.5rem;
-  border-bottom: 0.1rem solid rgb(174, 153, 138);
+  border-bottom: 0.1rem solid rgb(49, 43, 38);
   transform: scaleX(0);
   transition: 0.2s linear;
 }
@@ -63,10 +72,85 @@ body {
   margin: 0 0.5rem;
 }
 .navbar .navbar-extra a:hover {
-  color: aqua;
+  color: black;
 }
 #hamburger-menu {
   display: none;
+}
+
+/* Navbar search form */
+.navbar .search-form {
+  position: absolute;
+  top: 100%;
+  right: 7%;
+  background-color: white;
+  width: 38rem;
+  height: 4.5rem;
+  display: flex;
+  align-items: center;
+  transform: scaleY(0);
+  transform-origin: top;
+  transition: 0.3s;
+}
+.navbar .search-form.active {
+  transform: scaleY(1);
+}
+.navbar .search-form input {
+  height: 100%;
+  width: 100%;
+  font-size: 1.4rem;
+  color: black;
+  padding: 1rem;
+}
+.navbar .search-form label {
+  cursor: pointer;
+  font-size: 2rem;
+  margin-right: 0.5rem;
+  color: black;
+}
+
+/* shopping cart */
+.shopping-cart {
+  position: absolute;
+  top: 100%;
+  right: -100%;
+  height: 100vh;
+  width: 35rem;
+  padding: 0 1.5rem;
+  background-color: var(--warna4);
+  color: black;
+  transition: 0.5s;
+}
+.shopping-cart.active {
+  right: 0;
+}
+.shopping-cart .cart-item {
+  margin: 2rem 0;
+  display: flex;
+  align-items: center;
+  gap: 1.5rem;
+  padding-bottom: 1rem;
+  border-bottom: 1px dashed black;
+  position: relative;
+}
+.shopping-cart img {
+  height: 6rem;
+  border-radius: 50%;
+}
+.shopping-cart h3 {
+  font-size: 1.6rem;
+  padding-bottom: 0.5rem;
+}
+.shopping-cart .item-price {
+  font-size: 1.2rem;
+}
+.shopping-cart .remove-item {
+  position: absolute;
+  right: 1rem;
+  cursor: pointer;
+}
+.shopping-cart .remove-item:hover {
+  color: black;
 }
 
 /* Hero Section */
@@ -74,9 +158,241 @@ body {
   min-height: 100vh;
   display: flex;
   align-items: center;
-  background-image: url(../img/D’Crochet.png);
+  background-image: url(../img/D’Crochet3.png);
   background-size: cover;
   background-position: center;
+  position: relative;
+}
+.hero::after {
+  content: "";
+  display: block;
+  position: absolute;
+  width: 100%;
+  height: 30%;
+  bottom: 0;
+  background: linear-gradient(0deg, rgb(241, 226, 201) 8%, rgba(255, 255, 255, 0) 50%);
+}
+.hero .content {
+  padding: 1.4rem 7%;
+  max-width: 60rem;
+}
+.hero .content h1 {
+  font-size: 6em;
+  color: var(--warna5);
+  text-shadow: 1px 1px 3px rgba(1, 1, 3, 0.5);
+  line-height: 1.1;
+  font-family: "Noto Serif Display", serif;
+}
+.hero .content p {
+  font-size: 1.5rem;
+  margin-top: 0.2rem;
+  line-height: 1.6;
+  font-weight: 100;
+  text-shadow: 1px 1px 4px rgba(0, 0, 0, 0.5);
+  color: white;
+}
+.hero .content .cta {
+  display: inline-block;
+  margin-top: 1rem;
+  padding: 1rem 3rem;
+  font-size: 1.4rem;
+  color: white;
+  background-color: var(--warna1);
+  border-radius: 0.5rem;
+  box-shadow: 1px 1px3px rgba(1, 1, 3, 0.5);
+}
+.hero .content .cta:hover {
+  background-color: #d3b07f;
+  color: var(--warna5);
+}
+
+/* About Section */
+.about {
+  padding: 8rem 2% 1.4rem;
+  background-color: var(--warna2);
+}
+.about h2 {
+  text-align: center;
+  font-size: 3rem;
+  margin-bottom: 3rem;
+  font-family: "Neuton", serif;
+  color: var(--warna5);
+}
+.about .row {
+  display: flex;
+}
+.about .row .about-img {
+  flex: 1 1 45rem;
+}
+.about .row .about-img img {
+  width: 100%;
+}
+.about .row .content {
+  flex: 1 1 35rem;
+  padding: 0 1rem;
+}
+
+.about .row .content p {
+  margin-bottom: 0.8rem;
+  font-size: 1.2rem;
+  font-weight: 140;
+  line-height: 1.5;
+  color: var(--warna1);
+  text-align: center;
+  margin-top: 8rem;
+}
+
+/* Catalogue Section */
+.catalogue {
+  background-color: var(--warna3);
+}
+.catalogue h2 {
+  text-align: center;
+  font-size: 3rem;
+  margin-bottom: 3rem;
+  margin-top: 2rem;
+  font-family: "Neuton", serif;
+  color: var(--warna5);
+}
+.catalogue .row {
+  display: flex;
+  flex-wrap: wrap;
+  margin-top: 3rem;
+  justify-content: center;
+}
+.catalogue .row .catalogue-card {
+  text-align: center;
+  padding: 2rem 2rem;
+}
+.catalogue .row .catalogue-card img {
+  border-radius: 50%;
+}
+.catalogue .row .catalogue-card .catalogue-card-title {
+  margin-top: 1rem auto 0.5rem;
+}
+.catalogue h4 {
+  text-align: center;
+  margin-top: 2rem;
+  color: var(--warna1);
+}
+.catalogue h4 a {
+  color: blue;
+}
+.catalogue .row .catalogue-card .icon {
+  display: flex;
+  justify-content: center;
+  margin-top: 0.6rem;
+}
+.catalogue .row .catalogue-card .icon a {
+  width: 3rem;
+  height: 3rem;
+  color: var(--warna4);
+  background-color: var(--warna5);
+  border: 1px solid var(--warna5);
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.catalogue .row .catalogue-card .icon a:hover {
+  background-color: white;
+  border: 1px solid white;
+  color: var(--warna3);
+}
+
+/* Contact Section */
+.contact {
+  background-color: var(--warna2);
+}
+.contact h2 {
+  text-align: center;
+  font-size: 3rem;
+  margin-bottom: 0.7rem;
+  font-family: "Neuton", serif;
+  color: var(--warna5);
+}
+
+.contact form {
+  padding: 2rem 2rem;
+  text-align: center;
+}
+.contact form .input-grup {
+  display: flex;
+  align-items: center;
+  margin: 2rem 10rem;
+  background-color: var(--warna3);
+  border: 1px solid black;
+  padding-left: 3rem;
+}
+.contact form .input-grup input {
+  width: 90%;
+  padding: 2rem;
+  font-size: 1.1rem;
+  background: none;
+  color: black;
+}
+.contact form .btn {
+  display: inline-block;
+  margin-top: 3rem;
+  padding: 1rem 1.7rem;
+  font-size: 1.2rem;
+  color: white;
+  background-color: var(--warna1);
+  cursor: pointer;
+}
+.contact form .btn:hover {
+  color: var(--warna5);
+  background-color: #d3b07f;
+}
+.contact form .btn.btn-loading.d-none {
+  display: none;
+}
+.contact form .btn.btn-kirim.d-none {
+  display: none;
+}
+.alert {
+  padding: 2rem;
+  margin-bottom: 2rem;
+  margin-top: 2rem;
+  text-align: center;
+}
+.alert.d-none {
+  display: none;
+}
+
+/* Footer */
+footer {
+  background-color: var(--warna1);
+  text-align: center;
+  padding: 1rem 0;
+  margin-top: 3rem;
+  padding-bottom: 3rem;
+  color: white;
+}
+footer .socials {
+  padding: 1rem 0;
+}
+footer .socials a {
+  color: white;
+  margin: 1rem;
+}
+footer .socials a:hover,
+footer .links a:hover {
+  color: black;
+}
+footer .links {
+  margin-bottom: 1.4rem;
+}
+footer .links a {
+  color: white;
+  padding: 0.7rem 1rem;
+}
+footer .credit {
+  font-size: 0.8rem;
+}
+footer .credit a {
+  color: black;
+  font-weight: 700;
 }
 
 /* Media Queries */
@@ -100,7 +416,7 @@ body {
     position: absolute;
     top: 100%;
     right: -100%;
-    background-color: #fff;
+    background-color: var(--warna4);
     width: 30rem;
     height: 100vh;
     transition: 0.3s;
@@ -109,7 +425,7 @@ body {
     right: 0;
   }
   .navbar .navbar-nav a {
-    color: aqua;
+    color: black;
     display: block;
     margin: 1.5rem;
     padding: 0.5rem;
@@ -120,6 +436,49 @@ body {
   }
   .navbar .navbar-nav a:hover::after {
     transform: scaleX(0.2);
+  }
+  .about .row {
+    flex-wrap: wrap;
+  }
+  .about .row .about-img img {
+    height: 28rem;
+    object-fit: cover;
+    object-position: center;
+  }
+
+  .about .row .content {
+    padding: 0;
+  }
+  .about .row .content h3 {
+    margin-top: 1rem;
+    font-size: 1.6rem;
+  }
+  .about .row .content p {
+    font-size: 1.5rem;
+    text-align: center;
+    margin-top: 4rem;
+  }
+  .catalogue .row .catalogue-card .catalogue-card-title {
+    font-size: 1.7rem;
+  }
+  .catalogue .row .catalogue-card .catalogue-card-price {
+    font-size: 1.6rem;
+  }
+  .catalogue h4 {
+    font-size: 1.5rem;
+  }
+  .catalogue .row .catalogue-card .icon a {
+    width: 4rem;
+    height: 4rem;
+  }
+  .contact form .input-grup {
+    margin: 2rem 5rem;
+  }
+
+  footer .socials a,
+  footer .links a,
+  footer .credit {
+    font-size: 1.4rem;
   }
 }
 
